--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Pekara Kula | Svez hleb i domaca peciva - Pekara Zlatno Zrno</title>
 
   <meta name="author" content="Vasilije Medojevic">
-  <meta name="description" content="Pekara u Kuli sa svezim hlebom, domacim pecivima, burekom i tortama po porudzbini. Pogledaj ponudu, radno vreme i kontakt.">
+  <meta name="description" content="Pekara u Kuli sa svezim hlebom, domacim pecivima, burekom i tortama po porudzbini. Pogledaj ponudu, radno vreme i kontakt informacije.">
   <meta name="keywords" content="pekara Kula, svez hleb, domaca peciva, burek Kula, kroasani, torte po porudzbini, dostava peciva">
 
   <link rel="stylesheet" href="style.css">
@@ -27,7 +27,7 @@
         <a href="#ponuda">Ponuda peciva</a>
         <a href="#radno">Radno vreme</a>
         <a href="#lokacija">Lokacija pekare</a>
-        <a href="#kontakt">Kontakt pekare</a>
+        <a href="#kontakt">Kontakt pekare u Kuli</a>
       </nav>
     </div>
   </header>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="hero-media">
-        <img src="images/pekara.png" alt="Pekara u Kuli sa svezim hlebom i domacim pecivima">
+        <img src="images/pekara.jpg" alt="Pekara u Kuli sa svezim hlebom i domacim pecivima">
       </div>
     </section>
 
@@ -62,46 +62,39 @@
       <h2>Ponuda: domaca peciva, burek i torte po porudzbini</h2>
 
       <p>
-        Ako trazis pekaru u Kuli sa svezim hlebom i domacim pecivima, ovo su najtrazenije opcije.
-        Klikni na proizvod da skocis na kontakt i porucis.
+        Ako trazis pekaru u Kuli sa svezim hlebom i domacim pecivima,
+        u ponudi su proizvodi pripremljeni po tradicionalnoj recepturi.
       </p>
 
       <div class="grid">
         <article class="card">
-          <img src="images/hleb.png" alt="Svez hleb iz pekare u Kuli">
+          <img src="images/hleb.jpg" alt="Svez hleb iz pekare u Kuli">
           <h3>Svez hleb</h3>
-          <p>Beli, integralni i razani. Pecemo u vise tura tokom dana.</p>
+          <p>Beli, integralni i razani hleb, pecen vise puta dnevno.</p>
           <a class="link" href="#kontakt">Poruci svez hleb</a>
         </article>
 
         <article class="card">
-          <img src="images/burek.png" alt="Burek Kula iz pekare Zlatno Zrno">
+          <img src="images/burek.jpg" alt="Burek Kula iz pekare Zlatno Zrno">
           <h3>Burek Kula</h3>
-          <p>Burek sa sirom i burek sa mesom. Toplo i hrskavo.</p>
+          <p>Burek sa sirom i burek sa mesom, uvek topao.</p>
           <a class="link" href="#kontakt">Poruci burek</a>
         </article>
 
         <article class="card">
-          <img src="images/kroasan.png" alt="Kroasani i domaca peciva u Kuli">
+          <img src="images/kroasan.jpg" alt="Kroasani i domaca peciva u Kuli">
           <h3>Kroasani i kifle</h3>
-          <p>Kroasan sa cokoladom i puter kifle. Dobar izbor za dorucak.</p>
+          <p>Kroasani sa cokoladom i puter kifle.</p>
           <a class="link" href="#kontakt">Poruci domaca peciva</a>
         </article>
 
         <article class="card">
-          <img src="images/torta.png" alt="Torte po porudzbini u Kuli iz pekare">
+          <img src="images/torta.jpg" alt="Torte po porudzbini u Kuli iz pekare">
           <h3>Torte po porudzbini</h3>
-          <p>Za rodjendane i proslave. Porudzbina 48h ranije.</p>
+          <p>Torte za rodjendane i proslave uz prethodnu porudzbinu.</p>
           <a class="link" href="#kontakt">Poruci tortu</a>
         </article>
       </div>
-
-      <p>
-        Ako ti treba pekara u Kuli sa svezim hlebom i domacim pecivima, navrati danas.
-        Za vece porudzbine nudimo i dostavu peciva.
-      </p>
-
-      <img src="images/peciva.png" alt="Domaca peciva i svez hleb u pekari u Kuli">
     </section>
 
     <section id="radno" class="section">
@@ -115,16 +108,13 @@
             Sub: 07:00–16:00<br>
             Ned: 08:00–14:00
           </p>
-          <a class="link" href="#lokacija">Pogledaj lokaciju pekare</a>
         </div>
 
         <div class="panel">
           <h3>Dostava</h3>
           <p>
-            Dostava peciva je dostupna za vece porudzbine u Kuli.
-            Poruci telefonom i dogovori vreme isporuke.
+            Dostava peciva dostupna je za vece porudzbine na teritoriji Kule.
           </p>
-          <a class="link" href="#kontakt">Pozovi za dostavu peciva</a>
         </div>
       </div>
     </section>
@@ -132,61 +122,45 @@
     <section id="lokacija" class="section">
       <h2>Lokacija pekare u Kuli</h2>
 
-      <div class="two-col">
-        <div class="panel">
-          <h3>Adresa</h3>
-          <p>
-            Veljka Vlahovica 15, Kula
-          </p>
-          <p>
-            Lako se nalazi i pogodna je za brzo preuzimanje.
-          </p>
-          <a class="link" href="#kontakt">Kontakt pekare</a>
-        </div>
+      <p>
+        Adresa: Veljka Vlahovica 15, Kula
+      </p>
 
-        <div class="panel">
-          <h3>Kako da dodjes</h3>
-          <p>
-            Ako dolazis peske, prati glavnu ulicu do broja 15.
-            Ako dolazis kolima, parking je u okolini.
-          </p>
-          <a class="link" href="#ponuda">Vrati se na ponudu</a>
-        </div>
-      </div>
+      
+      <p>
+        Pogledaj lokaciju pekare na
+        <a href="https://www.google.com/maps" target="_blank">
+          Google Maps
+        </a>.
+      </p>
+      
+
     </section>
 
     <section id="kontakt" class="section">
       <h2>Kontakt: porudzbine i informacije</h2>
 
-      <div class="contact">
-        <div class="panel">
-          <p><strong>Telefon:</strong> 060555333</p>
-          <p><strong>Email:</strong> kontakt@zlatnozrno.rs</p>
-          <p>
-            Napis i poruku ili pozovi.
-            Reci da li zelis svez hleb, domaca peciva, burek ili tortu po porudzbini.
-          </p>
+      <p><strong>Telefon:</strong> 060555333</p>
+      <p><strong>Email:</strong> kontakt@zlatnozrno.rs</p>
 
-          <a class="btn" href="tel:060555333">Pozovi sada</a>
-        </div>
+      <p>
+        Pozovi nas ili posalji poruku za porudzbinu svezeg hleba,
+        domacih peciva, bureka ili torti po porudzbini.
+      </p>
 
-        <form class="panel" action="#" method="post">
-          <h3>Brza porudzbina</h3>
-
-          <label for="ime">Ime</label>
-          <input id="ime" name="ime" type="text" placeholder="Unesi ime">
-
-          <label for="porudzbina">Sta porucujes</label>
-          <textarea id="porudzbina" name="porudzbina" rows="4" placeholder="Na primer: burek sa sirom, 2 kom, preuzimanje u 09:30"></textarea>
-
-          <button class="btn" type="submit">Posalji porudzbinu</button>
-
-          <p class="small">
-            Forma je primer za projekat. Porudzbine potvrdi telefonom.
-          </p>
-        </form>
-      </div>
+      <a class="btn" href="tel:060555333">Pozovi sada</a>
     </section>
+
+    <section class="section">
+      <p>
+        Saznaj vise o tradiciji izrade peciva na
+        <a href="https://sr.wikipedia.org/wiki/Pekara" target="_blank">
+          Wikipedia stranici o pekarama
+        </a>.
+      </p>
+    </section>
+
+
   </main>
 
   <footer class="site-footer">
