--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="hero-media">
-        <img src="images/pekara.jpg" alt="Pekara u Kuli sa svezim hlebom i domacim pecivima">
+        <img src="images/pekara.png" alt="Pekara u Kuli sa svezim hlebom i domacim pecivima">
       </div>
     </section>
 
@@ -68,28 +68,28 @@
 
       <div class="grid">
         <article class="card">
-          <img src="images/hleb.jpg" alt="Svez hleb iz pekare u Kuli">
+          <img src="images/hleb.png" alt="Svez hleb iz pekare u Kuli">
           <h3>Svez hleb</h3>
           <p>Beli, integralni i razani hleb, pecen vise puta dnevno.</p>
           <a class="link" href="#kontakt">Poruci svez hleb</a>
         </article>
 
         <article class="card">
-          <img src="images/burek.jpg" alt="Burek Kula iz pekare Zlatno Zrno">
+          <img src="images/burek.png" alt="Burek Kula iz pekare Zlatno Zrno">
           <h3>Burek Kula</h3>
           <p>Burek sa sirom i burek sa mesom, uvek topao.</p>
           <a class="link" href="#kontakt">Poruci burek</a>
         </article>
 
         <article class="card">
-          <img src="images/kroasan.jpg" alt="Kroasani i domaca peciva u Kuli">
+          <img src="images/kroasan.png" alt="Kroasani i domaca peciva u Kuli">
           <h3>Kroasani i kifle</h3>
           <p>Kroasani sa cokoladom i puter kifle.</p>
           <a class="link" href="#kontakt">Poruci domaca peciva</a>
         </article>
 
         <article class="card">
-          <img src="images/torta.jpg" alt="Torte po porudzbini u Kuli iz pekare">
+          <img src="images/torta.png" alt="Torte po porudzbini u Kuli iz pekare">
           <h3>Torte po porudzbini</h3>
           <p>Torte za rodjendane i proslave uz prethodnu porudzbinu.</p>
           <a class="link" href="#kontakt">Poruci tortu</a>
