--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <meta property="og:title" content="Pekara Kula - Zlatno Zrno">
   <meta property="og:description" content="Svez hleb i domaca peciva u Kuli. Ponuda, radno vreme, lokacija i kontakt.">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://vasilijem02.github.io/VasilijeMedojevicIT5623/">
+  <meta property="og:image" content="https://vasilijem02.github.io/VasilijeMedojevicIT5623/images/pekara.jpg">
 
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
