--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="Svez hleb i domaca peciva u Kuli. Ponuda, radno vreme, lokacija i kontakt.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://vasilijem02.github.io/VasilijeMedojevicIT5623/">
-  <meta property="og:image" content="https://vasilijem02.github.io/VasilijeMedojevicIT5623/images/pekara.jpg">
+  <meta property="og:image" content="https://vasilijem02.github.io/VasilijeMedojevicIT5623/images/pekara.png">
 
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
